# reading_assistant

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev-shell.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: dictionary.json
src-tauri/src/: lib.rs
src-tauri/src/modules/: dictionary.rs  mod.rs  models.rs  selection.rs  store.rs  translator.rs
src/components/: DashboardView.tsx  LookupPopup.tsx
src/lib/: tauri.ts  types.ts
tooling/dev-shell/: start-dev-shell.ps1  stop-dev-shell.ps1
